ProjetCompil/Verif/Test/fail/affFausse.cas
program
   i : integer;
begin
   65 := i; 
end.